# lanceEmbeddings_AiAgent

./: README.md  chat.py  extract_post_data.py  inspect_lance.py  output.csv  posts_summary.csv  pyproject.toml
posts/: 89014957.data-engineer-vs-senior-data-engineer.html
